--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    android:background="@color/colorPrimary">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="20dp">
+        android:layout_gravity="center">
+        <ProgressBar
+            android:id="@+id/fragment_register_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,48 +24,50 @@
             android:textSize="25sp"
             android:layout_marginBottom="25dp"/>
         <EditText
-            android:id="@+id/register_nick_field"
+            android:id="@+id/fragment_register_nick_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nick_hint"
             android:layout_marginBottom="25dp"/>
         <EditText
-            android:id="@+id/register_email_field"
+            android:id="@+id/fragment_register_email_field"
             android:layout_marginBottom="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email_hint"/>
 
         <EditText
-            android:id="@+id/register_password_field"
+            android:id="@+id/fragment_register_password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
             android:hint="@string/password_hint"/>
-
         <Button
-            android:id="@+id/register_register_btn"
+            android:id="@+id/fragment_register_register_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:layout_gravity="center"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/white"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="@string/or"
-            android:textColor="@color/white"
             android:layout_gravity="center"/>
+
         <Button
-            android:id="@+id/register_login_btn"
+            android:id="@+id/fragment_register_login_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:layout_gravity="center"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/white"/>
+
+
     </LinearLayout>
 
 </LinearLayout>
