--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -7,27 +7,34 @@
     tools:context=".ChatsActivity"
     android:orientation="vertical"
     android:background="@color/colorPrimary"
+    android:focusableInTouchMode="true"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:background="@color/colorPrimary"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp">
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/chats_find_text"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:hint="Add chat based on ID"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:layout_marginRight="20dp"
+            android:imeOptions="actionSend"
+            android:textColor="@color/white"/>
         <Button
+            android:id="@+id/chats_find_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/white"
-            android:text="Find"/>
+            android:text="Search"/>
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
