--- a/app/src/main/res/drawable/gradient_home_1.xml
+++ b/app/src/main/res/drawable/gradient_home_1.xml
@@ -3,6 +3,5 @@
     <gradient
         android:angle="270"
         android:startColor="@color/colorPrimaryDark"
-        android:centerColor="@color/colorAccent"
-        android:endColor="@color/deep_red"/>
+        android:endColor="@color/colorAccent"/>
 </shape>
