--- a/app/src/main/res/layout/chat_recyle_view_item.xml
+++ b/app/src/main/res/layout/chat_recyle_view_item.xml
@@ -30,7 +30,8 @@
                 android:textSize="18dp"
                 android:textFontWeight="900"
                 android:text="#12345678"
-                android:layout_margin="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginLeft="20dp"
                 />
         </LinearLayout>
         </android.support.v7.widget.CardView>
