--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -22,20 +22,26 @@
             android:text="@string/login"
             android:layout_gravity="center"
             android:textSize="25sp"
-            android:layout_marginBottom="25dp"/>
+            android:layout_marginBottom="25dp"
+            android:textColor="@color/white"/>
         <EditText
             android:id="@+id/fragment_login_email_field"
             android:layout_marginBottom="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email_hint"/>
+            android:hint="@string/email_hint"
+            android:imeOptions="actionNext"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/fragment_login_password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
-            android:hint="@string/password_hint"/>
+            android:hint="@string/password_hint"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/fragment_login_login_btn"
@@ -50,7 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="@string/or"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
         <Button
             android:id="@+id/fragment_login_register_btn"
             android:layout_width="wrap_content"
