--- a/app/src/main/res/layout/content_register.xml
+++ b/app/src/main/res/layout/content_register.xml
@@ -28,20 +28,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nick_hint"
-            android:layout_marginBottom="25dp"/>
+            android:layout_marginBottom="25dp"
+            android:imeOptions="actionNext"
+            android:textColor="@color/white"/>
         <EditText
             android:id="@+id/fragment_register_email_field"
             android:layout_marginBottom="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email_hint"/>
+            android:hint="@string/email_hint"
+            android:imeOptions="actionNext"
+            android:textColor="@color/white"/>
 
         <EditText
             android:id="@+id/fragment_register_password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
-            android:hint="@string/password_hint"/>
+            android:inputType="textPassword"
+            android:hint="@string/password_hint"
+            android:textColor="@color/white"/>
         <Button
             android:id="@+id/fragment_register_register_btn"
             android:layout_width="wrap_content"
@@ -56,7 +62,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="@string/or"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/fragment_register_login_btn"
